# CGameEngine

./: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.c
src/core/: CMakeLists.txt
src/core/core/: core.c  core.h  window.c  window.h
